Finalized calorie prediction take home

--- a/Kate_TakeHome_final.ipynb
+++ b/Kate_TakeHome_final.ipynb
@@ -1471,7 +1471,7 @@
     "id": "18PJvNlyMc1N"
    },
    "source": [
-    "Planned run data is sparse, so the model must remain reliable even with minimal inputs. Duration is the only field consistently available, so the baseline path must always produce a calorie estimate from duration alone. When distance is present, I would add pace and speed. If Training Stress Score is available, I would include it as well.\n",
+    "Planned run data is sparse, so the model must remain reliable even with minimal inputs. Duration is the only field consistently available, so the baseline path must always produce a calorie estimate from duration alone. When distance is present, I would add pace and speed. If Training Stress Score is available, I would include it as well. This ensures reliable predictions for all planned workouts, while still leveraging additional data when available. If time allowed, I would create a separate duration-only baseline model and compare its performance against the full model when only duration is available. \n",
     "\n",
     "Because age, sex, and weight distributions match the completed run data, I can impute those variables for planned workouts using demographic medians from the actual runs. LightGBM’s ability to handle missing values directly makes it well suited for this scenario, so that would still be the model of choice.\n",
     "\n",
