Finalize calorie predictor take home model

--- a/Kate_TakeHome_final.ipynb
+++ b/Kate_TakeHome_final.ipynb
@@ -110,14 +110,15 @@
       "To: C:\\Users\\kemur\\Downloads\\Murphy_TakeHome\\workout_data.csv\n",
       "\n",
       "  0%|          | 0.00/40.0M [00:00<?, ?B/s]\n",
-      "  5%|5         | 2.10M/40.0M [00:00<00:01, 19.4MB/s]\n",
-      " 14%|#4        | 5.77M/40.0M [00:00<00:01, 28.0MB/s]\n",
-      " 29%|##8       | 11.5M/40.0M [00:00<00:00, 39.0MB/s]\n",
-      " 43%|####3     | 17.3M/40.0M [00:00<00:00, 45.5MB/s]\n",
-      " 60%|######    | 24.1M/40.0M [00:00<00:00, 53.1MB/s]\n",
-      " 79%|#######8  | 31.5M/40.0M [00:00<00:00, 58.4MB/s]\n",
-      " 94%|#########4| 37.7M/40.0M [00:00<00:00, 58.3MB/s]\n",
-      "100%|##########| 40.0M/40.0M [00:00<00:00, 51.3MB/s]\n"
+      "  7%|6         | 2.62M/40.0M [00:00<00:01, 25.5MB/s]\n",
+      " 17%|#7        | 6.82M/40.0M [00:00<00:00, 34.1MB/s]\n",
+      " 30%|###       | 12.1M/40.0M [00:00<00:00, 40.0MB/s]\n",
+      " 43%|####3     | 17.3M/40.0M [00:00<00:00, 43.5MB/s]\n",
+      " 55%|#####5    | 22.0M/40.0M [00:00<00:00, 38.0MB/s]\n",
+      " 66%|######5   | 26.2M/40.0M [00:00<00:00, 38.2MB/s]\n",
+      " 77%|#######7  | 30.9M/40.0M [00:00<00:00, 40.5MB/s]\n",
+      " 88%|########7 | 35.1M/40.0M [00:00<00:00, 37.8MB/s]\n",
+      "100%|##########| 40.0M/40.0M [00:01<00:00, 39.8MB/s]\n"
      ]
     }
    ],
@@ -161,7 +162,7 @@
     "### Plan\n",
     "The goal of this project is to develop a predictive model that estimates the number of calories burned during planned workouts using data from completed ones. Since planned workout data is not provided, I would proceed under the assumption that planned workouts will have the same structure and available features as the completed runs, minus the CALORIES column. \n",
     "\n",
-    "After confirming the objective, I would begin by loading the data. The dataset provided is large, ~500,000 entries, so I will randomly select a subset of 10% to analyze and make the assumption that selection under those specifications yields a sample representative of the overall dataset. Subsetting the data also improves processing time, which is important during model development. \n",
+    "After confirming the objective, I would begin by loading the data. The dataset provided is large, ~500,000 entries, so I will select a randomized subset of 10% to analyze and make the assumption that selection under those specifications yields a sample representative of the overall dataset. Subsetting the data also improves processing time, which is important during model development. \n",
     "\n",
     "Once the data is loaded, I can begin my exploratory data analysis (EDA) to get a sense of the dataset's shape and quality. I will look at missing values and how they are distributed because that has a direct impact on how the model will handle future planned workouts. This also includes a check on athlete distribution. Most athletes in the dataset log only one or two activities, which means we cannot rely heavily on per‑athlete history for imputation at this stage.\n",
     "\n",
@@ -1223,43 +1224,7 @@
       "Created 13 features\n",
       "\n",
       "Training model...\n",
-      "Handling missing values using training data only...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kemur\\Downloads\\Murphy_TakeHome\\CaloriePredictor.py:26: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self.df['PACE'] = self.df['DURATION_ACTUAL'] / (self.df['DISTANCE_ACTUAL'] / 1000)  # hours per km\n",
-      "C:\\Users\\kemur\\Downloads\\Murphy_TakeHome\\CaloriePredictor.py:27: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self.df['SPEED'] = (self.df['DISTANCE_ACTUAL'] / 1000) / self.df['DURATION_ACTUAL']  # km per hour\n",
-      "C:\\Users\\kemur\\Downloads\\Murphy_TakeHome\\CaloriePredictor.py:31: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self.df['INTENSITY_RATIO'] = self.df['HRAVG'] / self.df['HRMAX']\n",
-      "C:\\Users\\kemur\\Downloads\\Murphy_TakeHome\\CaloriePredictor.py:35: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self.df['SEX_ENCODED'] = (self.df['SEX'] == 'M').astype(int)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Handling missing values using training data only...\n",
       "\n",
       "Model Performance (with demographic imputation):\n",
       "  MAE: 58.8 calories\n",
@@ -1480,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1544,15 +1509,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== MODULAR CALORIE PREDICTION ANALYSIS ===\n",
-      "==================================================\n",
       "Loading data...\n",
       "Randomly sampled 50,000 records\n",
       "\n",
